added a non field errors to the overset forms [completed: 249]

--- a/groups/templates/groups/_group_form.html
+++ b/groups/templates/groups/_group_form.html
@@ -1,3 +1,6 @@
+{% for error in form.non_field_errors %}
+    <div class="overset_form_message error">{{ error }}</div>
+{% endfor %}
 {% for field in form %}
     {% if field.name == "name" or field.name == "description" %}
         <p class="form_row overset">
