--- a/templates/rah/_overset_form.html
+++ b/templates/rah/_overset_form.html
@@ -1,3 +1,6 @@
+{% for error in form.non_field_errors %}
+    <div class="overset_form_message error">{{ error }}</div>
+{% endfor %}
 {% for field in form %}
     <div class="form_row overset {% if field.errors %}error{% endif %}">
         {{ field.label_tag }}
