--- a/templates/comments/list.html
+++ b/templates/comments/list.html
@@ -4,7 +4,7 @@
 
 {% get_comment_list for object as comments %}
 {% if comments %}
-    <h2 id="comments_heading">What people are saying?</h2>
+    <h2 id="comments_heading">What people are saying</h2>
     {% for comment in comments %}
         <div class="comment_wrapper">
             <div class="comment">
