--- a/templates/rah/_tongue.html
+++ b/templates/rah/_tongue.html
@@ -26,7 +26,7 @@
         <a class="chart_link" href="{% url records_chart profile.user.id %}">Activity</a>
         <div>
             <a href="{% url records_chart profile.user.id %}" id="chart_dialog_link" class="chart_link" title="View progress chart">
-                <img src="/static/images/theme/tongue_graph.gif" alt="graph"/>
+                <img src="{{ MEDIA_URL }}images/theme/tongue_graph.gif" alt="graph"/>
             </a>
         </div>
     </div>
