--- a/actions/templates/actions/action_show.html
+++ b/actions/templates/actions/action_show.html
@@ -41,7 +41,7 @@
         {% endif %}
     </div>
     {% if not user.is_authenticated %}
-        <img src="/static/images/theme/benefits.jpg" alt="benefits"/>
+        <img src="{{ MEDIA_URL }}images/theme/benefits.jpg" alt="benefits"/>
     {% endif %}
     <div class="clear"></div>
     <div class="grid_2 alpha">
