--- a/groups/templates/groups/_membership_form.html
+++ b/groups/templates/groups/_membership_form.html
@@ -22,7 +22,7 @@
             {% for membership in form.memberships.field.queryset %}
                 <tr>
                     <td><input name="memberships" value="{{ membership.pk }}" type="checkbox"></input></td>
-                    <td>{{ membership.user.get_full_name }}</td>
+                    <td>{% safe_user_link membership.user %}</td>
                     <td>{{ membership.created }}</td>
                     <td>{% if membership.is_manager %}Manager{% else %}Regular Member{% endif %}</td>
                 </tr>
