--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -40,7 +40,7 @@
 {% endblock %}
 {% block right_content %}
 	<a href="{% url action_detail 'eliminate-standby-vampire-power' %}">
-		<img src="/static/images/rich_actions/vampire/large.png" width="740" height="402"/>
+		<img src="{{ MEDIA_URL }}images/actions/eliminate-standby-vampire-power/large.png" width="740" height="402"/>
 	</a>
 	<div class="spacer"></div>
 	<div class="grid_2 alpha">
