--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -5,23 +5,23 @@
 {% block content %}
 <div class="grid_3 alpha">
 	<a href="{% url action_detail 'eliminate-standby-vampire-power' %}">
-		<img src="/static/images/rich_actions/vampire/large.png" width="740" height="402"/>
+		<img src="{{ MEDIA_URL }}images/actions/eliminate-standby-vampire-power/large.png" width="740" height="402"/>
 	</a>
-	<div class="clear"></div> 
+	<div class="clear"></div>
 	<div class="grid_1 alpha">
-		<img src="/static/images/index/home_make_a_plan.png" width="240" height="147"/>
+		<img src="{{ MEDIA_URL }}images/index/home_make_a_plan.png" width="240" height="147"/>
 		<p>
 			Use the actions page to find smart solutions to home energy waste
 		</p>
 	</div>
 	<div class="grid_1">
-		<img src="/static/images/index/home_save_energy.png" width="240" height="147"/>		
+		<img src="{{ MEDIA_URL }}images/index/home_save_energy.png" width="240" height="147"/>		
 		<p>
 			Complete actions to lower your monthly bills and create a cleaner world
 		</p>	
 	</div>
 	<div class="grid_1 omega">
-		<img src="/static/images/index/home_take_the_lead.png" width="240" height="149"/>
+		<img src="{{ MEDIA_URL }}images/index/home_take_the_lead.png" width="240" height="149"/>
 		<p>
 			Organize your friends, family, and neighbors on the community page
 		</p>
