Replacing class="spacer" with class="clear"

--- a/actions/templates/actions/vampire_power/_device.html
+++ b/actions/templates/actions/vampire_power/_device.html
@@ -7,7 +7,7 @@
 {#     annually by slaying <br /> #}
 {#     this vampire #}
 {# </div> #}
-<br class="spacer" />
+<br class="clear" />
 <form method="post" action="{% url save_action_from action.slug 'VampirePowerWorksheetForm' %}">
     <p>
         Below are options for slaying this vampire, <br />
