--- a/groups/templates/groups/_group_header.html
+++ b/groups/templates/groups/_group_header.html
@@ -22,4 +22,4 @@
         Group Membership: {% if group.is_public %}Open{% else %}Closed{% endif %}
     </div>
 </div>
-<br class="spacer" />
+<br class="clear" />
