--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -81,7 +81,7 @@
                 </ol>
             {% endif %}
         </div>
-        <br class="spacer" />
+        <br class="clear" />
     </div>
     
     
