--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -42,7 +42,7 @@
 	<a href="{% url action_detail 'eliminate-standby-vampire-power' %}">
 		<img src="{{ MEDIA_URL }}images/actions/eliminate-standby-vampire-power/large.png" width="740" height="402"/>
 	</a>
-	<div class="spacer"></div>
+	<div class="clear"></div>
 	<div class="grid_2 alpha">
 	    {% if in_progress %}
 	        <div class="actions_block" id="actions_in_progress">
