--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -6,14 +6,13 @@
 {% endblock %}
 
 {% block title %}Post archive{% endblock %}
-{% block body_class %}{{ block.super }} post_list{% endblock %}
 
 {% block content_title %}
     <h2>Post archive</h2>
 {% endblock %}
 
 {% block right_content %}
-    <div class="grid_3 alpha">
+    <div class="grid_2 alpha">
         <div id="breadcrumbs">
             <a href="{% url rah.views.index %}">Home</a> &rsaquo;
             Blog
@@ -21,9 +20,16 @@
         <div class="post_list">
             {% for post in object_list %}
                 <div>
-                    {% include 'blog/_post_header.html' %}
-                    <p class="tease">{{ post.tease|safe }} (<a href="{{ post.get_absolute_url }}" title="View this post">read more</a>)</p>
-                    {% get_comment_count for post as comment_count %}
+                    <h2 class="title">
+						<a href="{{ post.get_absolute_url }}" title="View this post">{{ post.title }}</a>
+					</h2>
+					<p>
+						<em>Posted by {% safe_user_link post.author %} on {{ post.publish|date:"F j, Y" }}</em>
+					</p>
+                    
+					{{ post.body|safe }}
+                    
+					{% get_comment_count for post as comment_count %}
                     <p>
                         {{ comment_count }} comment{{ comment_count|pluralize }}
                     </p>
