if the user isn't logged in a link appears in a comments block telling them to do so if they want to leave a comment.  this code has been moved out of the post_detail file and into comments/form.html so it is reusable for all comment blocks on the site.

--- a/templates/comments/form.html
+++ b/templates/comments/form.html
@@ -25,4 +25,6 @@
         {% csrf_token %}
         </div>
     </form>
+{% else %}
+    <a href="{% url login %}">Log in</a> or <a href="{% url register %}">sign up</a> to post comments.
 {% endif %}
