added breadcrumbs to all of the team pages [completed: 257]

--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -54,6 +54,11 @@
 {% endblock %}
 
 {% block right_content %}
+    <div id="breadcrumbs">
+        <a href="{% url index %}">Home</a> &rsaquo;
+        <a href="{% url group_list %}">Teams</a> &rsaquo;
+        {{group.name}}
+    </div>
     <div id="group_header" class="group_section">
         {% include "groups/_group_header.html" %}
     </div>
