--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -1,5 +1,10 @@
 {% extends "rah/base.html" %}
 {% block right_content %}
+    <div id="breadcrumbs">
+        <a href="{% url index %}">Home</a> &rsaquo;
+        <a href="{% url group_list %}">Teams</a> &rsaquo;
+        Create Team
+    </div>
     <form id="group_form" action="" method="post" enctype="multipart/form-data">
         <h1>Create a Team</h1>
         {% include "groups/_group_form.html" %}
