--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
 {% block right_content %}
+    <div id="breadcrumbs">
+        <a href="{% url index %}">Home</a> &rsaquo;
+        Teams
+    </div>
     <div class="grid_2 alpha">
 		{% if user.is_authenticated and my_groups %}
 			<h1>Your Teams</h1>
