changed all of the language around "Groups" to "Teams"

--- a/groups/templates/groups/group_disc_detail.html
+++ b/groups/templates/groups/group_disc_detail.html
@@ -16,7 +16,7 @@
     {% else %}
         {% if group.is_joinable %}
             You must be a member of this group to post discussions. 
-            <a class="button" href="{% url group_join group.id %}">Join Group</a>
+            <a class="button" href="{% url group_join group.id %}">Join Team</a>
         {% endif %}
     {% endif %}
 {% endblock %}
