--- a/groups/templates/groups/_group_header.html
+++ b/groups/templates/groups/_group_header.html
@@ -3,10 +3,10 @@
 <img class="group_image" src="{% thumbnail group.safe_image 50x50 crop='smart' %}" alt="group image" height="50" width="50" />
 <div class="group_details">
     {% if is_manager %}
-        <span class="group_action">| <a href="{% url group_edit group.slug %}">Edit Group</a></span>
+        <span class="group_action">| <a href="{% url group_edit group.slug %}">Edit Team</a></span>
     {% endif %}
     {% if group.is_joinable and is_member %}
-        <a class="group_action" href="{% url group_leave group.id %}">Leave Group</a>
+        <a class="group_action" href="{% url group_leave group.id %}">Leave Team</a>
     {% endif %}
     <h1><a href="{{ group.get_absolute_url }}">{{ group.name }}</a></h1>
     {% for parent in group.parents %}
@@ -19,7 +19,7 @@
         <p class="group_description">{{ group.description }}</p>
     {% endif %}
     <div class="membership_type">
-        Group Membership: {% if group.is_public %}Open{% else %}Closed{% endif %}
+        Team Membership: {% if group.is_public %}Open{% else %}Closed{% endif %}
     </div>
 </div>
 <br class="clear" />
