--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -8,7 +8,7 @@
     <form id="group_form" action="" method="post" enctype="multipart/form-data">
         <h1>Create a Team</h1>
         {% include "groups/_group_form.html" %}
-        <p><input type="submit" value="Create Group" /></p>
+        <p><input type="submit" value="Create Team" /></p>
         {% csrf_token %}
     </form>
 {% endblock %}
