tweaks to group detail page

--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -72,7 +72,7 @@
                 <h2>Popular Actions</h2>
                 <ol>
                 {% for action in popular_actions %}
-                    <li><a href="{% url action_detail action.slug %}">{{ action }}</a> ({{ action.completes_in_group }} member)</li>
+                    <li><a href="{% url action_detail action.slug %}">{{ action }}</a> ({{ action.completes_in_group }} member{{ action.completes_in_group|pluralize }})</li>
                 {% endfor %}
                 </ol>
             {% endif %}
