added directions for vampire action guide worksheet

--- a/actions/templates/actions/vampire_power/_vampire_worksheet_forms.html
+++ b/actions/templates/actions/vampire_power/_vampire_worksheet_forms.html
@@ -12,7 +12,7 @@
             <li class="worksheet">
                 {% include "actions/vampire_power/_get_started.html" %}
             </li>
-            <li class="worksheet">
+            <li id="vampire_directions" class="worksheet">
                 {% include "actions/vampire_power/_directions.html" %}
             </li>
             {% for field in vampire_worksheet_form %}
