--- a/actions/templates/actions/vampire_power/_directions.html
+++ b/actions/templates/actions/vampire_power/_directions.html
@@ -1,11 +1,17 @@
-<h2>So how can I slay the vampires in my house?</h2>
+<h2>Tools of the trade</h2>
 <p>
-    Alias voluptate est eligendi nemo, repellendus corrupti consequuntur voluptates, officiis dolor autem minima fuga perspiciatis error itaque corporis at, quisquam et consequatur velit at assumenda facilis alias error nobis reprehenderit consectetur, repellendus vero iste sunt minima saepe nesciunt expedita
+    There are three ways stop vampire power:
+    <ul>
+        <li>Unplug the vampire when you’re not using it</li>
+        <li>Attach it to a power strip, and turn that power strip off when you’re done using it 
+            (<a href="#conventional_power">learn more</a>)</li>
+        <li>Attach it to a smart power strip, which automatically cuts power to vampires 
+            (<a href="#smart_power">learn more</a>)</li>
+    </ul>
 </p>
 <p>
-    Alias voluptate est eligendi nemo, repellendus corrupti consequuntur voluptates, officiis dolor autem minima fuga perspiciatis error itaque corporis at, quisquam et consequatur velit at assumenda facilis alias error nobis reprehenderit consectetur, repellendus vero iste sunt minima saepe nesciunt expedita
+    In the next slides, you’ll meet the vampires in your home. For each vampire, we’ve highlighted 
+    our recommended slaying method. If you plan on using one of the other tactics, go ahead and select it.
 </p>
-<p>
-    Alias voluptate est eligendi nemo, repellendus corrupti consequuntur voluptates, officiis dolor autem minima fuga perspiciatis error itaque corporis at, quisquam et consequatur velit at assumenda facilis alias error nobis reprehenderit consectetur, repellendus vero iste sunt minima saepe nesciunt expedita
-</p>
+
 <a id="directions" class="frame_shifter button" href="#">Start Slaying</a>
